--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/drawer": "^6.7.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.20",
+    "expo-camera": "^15.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
